; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/temperature/extr_hid-sensor-temperature.c_temperature_capture_sample.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/temperature/extr_hid-sensor-temperature.c_temperature_capture_sample.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hid_sensor_hub_device = type { i32 }
%struct.iio_dev = type { i32 }
%struct.temperature_state = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hid_sensor_hub_device*, i32, i64, i8*, i8*)* @temperature_capture_sample to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @temperature_capture_sample(%struct.hid_sensor_hub_device* %0, i32 %1, i64 %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.hid_sensor_hub_device*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca %struct.iio_dev*, align 8
  %13 = alloca %struct.temperature_state*, align 8
  store %struct.hid_sensor_hub_device* %0, %struct.hid_sensor_hub_device** %7, align 8
  store i32 %1, i32* %8, align 4
  store i64 %2, i64* %9, align 8
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  %14 = load i8*, i8** %11, align 8
  %15 = call %struct.iio_dev* @platform_get_drvdata(i8* %14)
  store %struct.iio_dev* %15, %struct.iio_dev** %12, align 8
  %16 = load %struct.iio_dev*, %struct.iio_dev** %12, align 8
  %17 = call %struct.temperature_state* @iio_priv(%struct.iio_dev* %16)
  store %struct.temperature_state* %17, %struct.temperature_state** %13, align 8
  %18 = load i32, i32* %8, align 4
  switch i32 %18, label %25 [
    i32 128, label %19
  ]

19:                                               ; preds = %5
  %20 = load i8*, i8** %10, align 8
  %21 = bitcast i8* %20 to i32*
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.temperature_state*, %struct.temperature_state** %13, align 8
  %24 = getelementptr inbounds %struct.temperature_state, %struct.temperature_state* %23, i32 0, i32 0
  store i32 %22, i32* %24, align 4
  store i32 0, i32* %6, align 4
  br label %28

25:                                               ; preds = %5
  %26 = load i32, i32* @EINVAL, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %6, align 4
  br label %28

28:                                               ; preds = %25, %19
  %29 = load i32, i32* %6, align 4
  ret i32 %29
}

declare dso_local %struct.iio_dev* @platform_get_drvdata(i8*) #1

declare dso_local %struct.temperature_state* @iio_priv(%struct.iio_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
